# cpp-project-template

./: CMakeLists.txt  flake.nix
src/: main.cpp
